--- a/main.css
+++ b/main.css
@@ -6,10 +6,47 @@
      
      .jumbotron {
       margin-bottom: 0;
-         background-image: url(pics/panini.jpg)
+         background-image: url(pics/panini.jpg ),  url(pics/panini.jpg );
+         background-repeat: no-repeat;
+         background-size:contain;
+         width: 100%;
+         background-position: left, right;
     }
    
     footer {
 	  background-color: #f2f2f2;
       padding: 25px;
     }
+.jumbotron{
+  text-align:center;
+  font-size:6.5em;
+  color:black;
+  letter-spacing: -7px;
+  font-weight:700;
+  text-transform:uppercase;
+  animation:blur .75s ease-out infinite;
+  text-shadow:0px 0px 5px #fff,
+      0px 0px 7px #fff;
+}
+
+@keyframes blur{
+  from{
+      text-shadow:0px 0px 10px #fff,
+      0px 0px 10px #fff, 
+      0px 0px 25px #fff,
+      0px 0px 25px #fff,
+      0px 0px 25px #fff,
+      0px 0px 25px #fff,
+      0px 0px 25px #fff,
+      0px 0px 25px #fff,
+      0px 0px 50px #fff,
+      0px 0px 50px #fff,
+      0px 0px 50px #7B96B8,
+      0px 0px 150px #7B96B8,
+      0px 10px 100px #7B96B8,
+      0px 10px 100px #7B96B8,
+      0px 10px 100px #7B96B8,
+      0px 10px 100px #7B96B8,
+      0px -10px 100px #7B96B8,
+      0px -10px 100px #7B96B8;}
+}
