--- a/main.css
+++ b/main.css
@@ -41,12 +41,34 @@
       0px 0px 25px #fff,
       0px 0px 50px #fff,
       0px 0px 50px #fff,
-      0px 0px 50px #7B96B8,
-      0px 0px 150px #7B96B8,
-      0px 10px 100px #7B96B8,
-      0px 10px 100px #7B96B8,
-      0px 10px 100px #7B96B8,
-      0px 10px 100px #7B96B8,
-      0px -10px 100px #7B96B8,
-      0px -10px 100px #7B96B8;}
+      0px 0px 50px #FFFF00,
+      0px 0px 150px #FFFF00,
+      0px 10px 100px #FFFF00,
+      0px 10px 100px #FFFF00,
+      0px 10px 100px #FFFF00,
+      0px 10px 100px #FFFF00,
+      0px -10px 100px #FFFF00,
+      0px -10px 100px #FFFF00}
+}
+.jumbotro{
+color: #fff;
+font-size: 12em;
+font-weight: bold;
+font-family: Helvetica;
+text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
+}
+#page1{
+    height: 1000px;
+    background-color: darkslategrey;
+}
+.div1 {
+    float: left;
+    width: 600px;
+    height: auto;
+    margin: 10px;
+    border: 3px solid #73AD21;
+}
+
+.div2 {
+    border: 1px solid red;
 }
