--- a/main.css
+++ b/main.css
@@ -72,8 +72,17 @@ text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px
 .div2 {
     border: 1px solid red;
 }
+.div3 {
+    float: left;
+    width: 600px;
+    height: auto;
+    margin: 10px;
+    border: 3px solid #73AD21;
+    align-content: center;
+}
 #page2{
     height: 1000px;
     background-color:pink;
     text-align: center;
+    background-image: url(pics/McDonalds-Big-Mac-1920x1200.jpg)
 }
